--- a/front/src/components/Menu/style.css
+++ b/front/src/components/Menu/style.css
@@ -3,14 +3,13 @@
   justify-content: space-between;
   height: 50px;
   background-color: #fff;
-  color: red;
   align-items: center;
   padding: 0 12px;
 }
 
 .menu button {
   background-color: transparent;
-  color: red;
+  color: #fccd07;
   border: none;
   cursor: pointer;
 }
@@ -19,8 +18,30 @@
   height: 100vh;
   width: 200px;
   background-color: #fff;
-  color: red;
+  color: #333;
   position: fixed;
   top: 0;
   left: 0;
+}
+
+.menu .login {
+  padding: 8px 16px;
+  background-color: #fccd07;
+  color: #333;
+  border-radius: 5px;
+}
+
+.menu .logo {
+  display: flex;
+  align-items: center;
+  margin-left: 4px;
+}
+
+.menu .marca {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.menu-lateral ul li:hover {
+  color: #fccd07;
 }
