--- a/front/src/components/CardNoticia/style.css
+++ b/front/src/components/CardNoticia/style.css
@@ -26,3 +26,18 @@
 .card-noticia .publicado-em {
   padding: 10px 10px 30px 10px ;
 }
+
+.card-noticia .popular {
+  position: absolute;
+  color: rgb(var( --background-start-rgb));
+  font-size: 30px;
+  font-weight: bolder;
+  background: #FCCD07D6;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
