--- a/front/src/components/Menu/style.css
+++ b/front/src/components/Menu/style.css
@@ -1,3 +1,4 @@
+/* style.css */
 .menu {
   display: flex;
   justify-content: space-between;
@@ -14,7 +15,7 @@
   cursor: pointer;
 }
 
-.menu-lateral {
+.menu_lateral {
   height: 100vh;
   width: 200px;
   background-color: #fff;
@@ -22,6 +23,29 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1000; /* Certifique-se de que o menu lateral tenha um z-index alto */
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.menu_lateral ul {
+  padding: 0;
+}
+
+.menu_lateral ul li {
+  list-style: none;
+  padding: 10px 0;
+}
+
+.menu_lateral ul li a {
+  text-decoration: none;
+  color: #333;
+  display: block;
+  padding: 10px;
+}
+
+.menu_lateral ul li a:hover {
+  color: #fccd07;
 }
 
 .menu .login {
@@ -42,6 +66,13 @@
   font-size: 20px;
 }
 
-.menu-lateral ul li:hover {
-  color: #fccd07;
+/* Novo CSS para a sobreposição de fundo */
+.menu_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999; /* Certifique-se de que o overlay tenha um z-index menor que o menu lateral */
 }
